updating images to webp

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -70,49 +70,49 @@
     }
 
     &#wateraid {
-      background-image: url('../images/Water_Aid_America1.jpg');
+      background-image: url('../images/Water_Aid_America1.webp');
       color: #fff;
     }
 
     &#mj-speechtherapy {
-      background-image: url('../images/04.jpg');
+      background-image: url('../images/04.webp');
       color: #fff;
     }
 
     &#hb-cleaning {
-      background-image: url('../images/hb-room.jpg');
+      background-image: url('../images/hb-room.webp');
       color: #fff;
     }
 
     &#tbl {
-      background-image: url('../images/tbl-small.jpg');
+      background-image: url('../images/tbl-small.webp');
     }
 
     &#southern-sports {
-      background-image: url('../images/hockey_player_large3.jpg');
+      background-image: url('../images/hockey_player_large3.webp');
       background-position: center top;
       color: #fff;
     }
 
     &#sarah {
-      background-image: url('../images/sarah-may-low.jpg');
+      background-image: url('../images/sarah-may-low.webp');
       color: #fff;
     }
 
     &#bailey {
-      background-image: url('../images/amy-low-res.jpg');
+      background-image: url('../images/amy-low-res.webp');
     }
 
     &#brand-hub {
-      background-image: url('../images/brand-hub_0.png');
+      background-image: url('../images/brand-hub_0.webp');
     }
 
     &#thirsty-thursdays {
-      background-image: url('../images/thirstythursdays_620.png');
+      background-image: url('../images/thirstythursdays_620.webp');
       color: #fff;
     }
   }
-
+  
   .item-inner:hover,
   .item-inner:active {
     * {
