--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -4,27 +4,42 @@
   margin-top: 70px;
   margin-bottom: 40px;
   display: flex;
-  overflow-x: scroll;
+  //overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
+
+  flex-wrap: wrap;
+
+  margin-left: 30px;
+  margin-right: 30px;
 
   .item {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     display: flex;
-    min-width: 100vw;
     min-height: 50vh;
-    margin-right: 15px;
+    width: calc(100% - 15px);
+    margin-bottom: 30px;
+
+    &:nth-child(odd) {
+      margin-right: 0;
+      @include breakpoint(large) {
+        margin-right: 30px;
+      }
+    }
 
     &:last-of-type {
       margin-right: 0;
     }
 
     @include breakpoint(large) {
-      min-width: 50vw;
+      //min-width: 50vw;
+      //min-height: 500px;
+      //margin-left: 0;
+      //margin-bottom: 0;
+
       min-height: 500px;
-      margin-left: 0;
-      margin-bottom: 0;
+      width: calc(50% - 15px);
     }
 
     .item-inner {
@@ -112,7 +127,7 @@
       color: #fff;
     }
   }
-  
+
   .item-inner:hover,
   .item-inner:active {
     * {
