--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -1,6 +1,6 @@
 #case-studies {
   list-style: none;
-  padding: 0;
+  //padding: 0;
   margin-top: 70px;
   margin-bottom: 40px;
   display: flex;
@@ -9,8 +9,8 @@
 
   flex-wrap: wrap;
 
-  margin-left: 30px;
-  margin-right: 30px;
+  //margin-left: 30px;
+  //margin-right: 30px;
 
   .item {
     background-size: cover;
