--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -85,12 +85,12 @@
     }
 
     &#wateraid {
-      background-image: url('../images/Water_Aid_America1.webp');
+      background-image: url('../images/VFMAD63_029.webp');
       color: #fff;
     }
 
     &#mj-speechtherapy {
-      background-image: url('../images/04.webp');
+      background-image: url('../images/mj-speechtherapy.webp');
       color: #fff;
     }
 
@@ -133,8 +133,7 @@
     * {
       color: #fff;
     }
-      background: #232526;
-      background: linear-gradient(to left,#232526,#414345);
+      background: #a864a8;
   }
 
 }
