changing images from webp to jpg, TODO

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -85,46 +85,22 @@
     }
 
     &#wateraid {
-      background-image: url('../images/VFMAD63_029.webp');
+      background-image: url('../images/VFMAD63_029.jpg');
       color: #fff;
     }
 
     &#mj-speechtherapy {
-      background-image: url('../images/mj-speechtherapy.webp');
+      background-image: url('../images/mj-speechtherapy.jpg');
       color: #fff;
     }
 
     &#hb-cleaning {
-      background-image: url('../images/hb-room.webp');
+      background-image: url('../images/hb-room.jpg');
       color: #fff;
-    }
-
-    &#tbl {
-      background-image: url('../images/tbl-small.webp');
-    }
-
-    &#southern-sports {
-      background-image: url('../images/hockey_player_large3.webp');
-      background-position: center top;
-      color: #fff;
-    }
-
-    &#sarah {
-      background-image: url('../images/sarah-may-low.webp');
-      color: #fff;
-    }
-
-    &#bailey {
-      background-image: url('../images/amy-low-res.webp');
     }
 
     &#brand-hub {
-      background-image: url('../images/brand-hub_0.webp');
-    }
-
-    &#thirsty-thursdays {
-      background-image: url('../images/thirstythursdays_620.webp');
-      color: #fff;
+      background-image: url('../images/brand-hub_0.jpg');
     }
   }
 
