--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -1,16 +1,9 @@
 #case-studies {
-  list-style: none;
-  //padding: 0;
   margin-top: 70px;
   margin-bottom: 40px;
   display: flex;
-  //overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
-
   flex-wrap: wrap;
-
-  //margin-left: 30px;
-  //margin-right: 30px;
 
   .item {
     background-size: cover;
@@ -18,7 +11,7 @@
     background-position: center center;
     display: flex;
     min-height: 50vh;
-    width: calc(100% - 15px);
+    width: 100%;
     margin-bottom: 30px;
 
     &:nth-child(odd) {
@@ -33,11 +26,6 @@
     }
 
     @include breakpoint(large) {
-      //min-width: 50vw;
-      //min-height: 500px;
-      //margin-left: 0;
-      //margin-bottom: 0;
-
       min-height: 500px;
       width: calc(50% - 15px);
     }
