css fixes for homepage, changing layout

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -97,7 +97,8 @@
     * {
       color: #fff;
     }
-      background: #a864a8;
+      background:rgba(0,0,0,0.6);
+      transition: all 0.2s;
   }
 
 }
