updating contact page layout again

--- a/src/layouts/components/_what-ive-been-upto.scss
+++ b/src/layouts/components/_what-ive-been-upto.scss
@@ -31,7 +31,7 @@
   max-width: 100%;
   margin-top: 30px;
   padding: 30px;
-  background: #E5E5E5;
+  background: #f7f7f7;
 
   @include breakpoint(medium) {
     margin-top: 30px;
