--- a/src/layouts/components/_what-ive-been-upto.scss
+++ b/src/layouts/components/_what-ive-been-upto.scss
@@ -14,38 +14,20 @@
   section {
     max-width: 100%;
   }
-}
 
+  .email {
+    margin: 20px 0;
+    display: block;
 
-/*#what-ive-been {
-  max-width: 100%;
-  margin-top: 30px;
-  padding: 30px;
-  background: #f7f7f7;
+    /*@include breakpoint(medium) {
+      margin: 0;
+      display: inline;
+    }*/
 
-  @include breakpoint(medium) {
-    margin-top: 30px;
-    max-width: 100%;
-  }
-
-  @include breakpoint(large) {
-    margin-top: 10px;
-    max-width: 40%;
-    margin-left: auto;
-  }
-
-  h3 {
-    margin-top: 0;
-    margin-bottom: 30px;
-  }
-
-  ul {
-    margin-bottom: 10px;
-    li {
-      margin-bottom: 35px;
-      &:last-of-type {
-        margin-bottom: 0;
-      }
+    @include breakpoint(large) {
+      margin: 0;
+      display: inline;
     }
   }
-}*/
+
+}
