--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -21,7 +21,8 @@
 }
 
 html {
-  background-color: #E5E5E5;
+  max-width: 1600px;
+  margin: 0px auto;
   background-position: 0 0;
   background-repeat: repeat;
   font-family: sans-serif;
@@ -44,7 +45,6 @@ body {
   margin-bottom: 0;
   background: #fff;
   min-height: 100vh;
-  max-width: 1600px;
 }
 
 #Header,
