services page, adding css grid - adding poop

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -120,6 +120,7 @@ textarea:invalid {
     box-shadow: none;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
     -webkit-appearance: none;
 }
