services page, adding css grid - adding poop

--- a/src/layouts/components/_services.scss
+++ b/src/layouts/components/_services.scss
@@ -3,13 +3,12 @@
     display: grid;
     grid-gap: 50px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 999px;
     li {
-
       h3 {
         line-height: 1.1;
         margin-bottom: 10px;
       }
-
       p {
         margin-bottom: 0;
       }
