--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -32,6 +32,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-size: 17px;
+  background-color: #e5e5e5;
 }
 
 body {
