removing width from html css

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -21,7 +21,7 @@
 }
 
 html {
-  max-width: 1600px;
+  //max-width: 1600px;
   margin: 0px auto;
   background-position: 0 0;
   background-repeat: repeat;
