--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -21,7 +21,6 @@
 }
 
 html {
-  //max-width: 1600px;
   margin: 0px auto;
   background-position: 0 0;
   background-repeat: repeat;
@@ -32,7 +31,6 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-size: 17px;
-  background-color: #e5e5e5;
 }
 
 body {
@@ -45,24 +43,26 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   background: #fff;
-  min-height: 100vh;
 }
 
-#Header,
-#Footer,
-#Header + section,
-.control-width {
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+#___gatsby {
+    height: 100%;
+}
+
+.container-wrap {
+  min-height: 100%;
+  display: grid;
+  grid-template-areas: "Header" "Main-content" "Footer";
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
   padding-left: 7%;
   padding-right: 7%;
-  margin-left: auto;
-  margin-right: auto;
 }
-
-section#home {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 
 form {
   margin-top: 50px;
