--- a/src/layouts/components/_components.scss
+++ b/src/layouts/components/_components.scss
@@ -1,5 +1,6 @@
 @import "navigation";
 @import "case-studies";
 @import "what-ive-been-upto";
+@import "portfolio-item";
 @import "footer";
 @import "services";
