tidying up, commenting out animate.css guff

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -125,3 +125,23 @@ input[type="text"],
 input[type="email"] {
     -webkit-appearance: none;
 }
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
