--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -17,36 +17,80 @@
     grid-template-columns: 1fr 1fr;
   }
 
+
   grid-auto-flow: dense;
   grid-gap: 30px;
 
   .item {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    min-height: 300px;
     grid-column: span 1;
-    margin-bottom: 30px;
+    overflow: hidden;
 
     @include breakpoint(medium) {
-        margin-bottom: 30px;
+        min-height: 300px;
     }
 
     @include breakpoint(large) {
-        margin-bottom: 40px;
+        min-height: 460px;
     }
 
+    /*&:before {
+      content: "";
+      display: inline-block;
+      width: 1px;
+      height: 0;
+      padding-bottom: calc(100% / 1/1);
+    }*/
+
     .item-inner {
+      padding: 25px 7% 25px 7%;
       transition: all .2s ease 0s;
-      margin-top: 20px;
+      position: absolute;
+      top: 0;
+      height: calc(100% - 7%);
+      background:rgba(0,0,0,0.6);
+      width: calc(100% - 14%);
+      * {
+        color: #fff;
+      }
 
       h3 {
         line-height: 1.1;
-        margin-top: 0;
+      }
+
+      span {
+        font-size: .9rem;
+      }
+
+      @include breakpoint(medium) {
+        background: transparent;
+        * {
+          color: inherit;
+        }
+      }
+
+      @include breakpoint(large) {
+        background: transparent;
+        padding: 36px;
+        width: calc(100% - 72px);
+        height: calc(100% - 72px);
+        * {
+          color: inherit;
+        }
       }
     }
 
     &:hover {
       .item-inner__content {
-        //opacity: .7;
-        //-webkit-transform: translate3d(0,0,0);
-        //transform: translate3d(0,0,0);
+        opacity: .7;
+        -webkit-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
       }
     }
 
@@ -173,30 +217,30 @@
     }*/
 
     &#mary-jane-speechtherapy {
-      //color: #fff;
+      color: #fff;
     }
 
     &#wateraid  {
-      //color: #fff;
+      color: #fff;
     }
 
     &#hb-cleaning {
-      //color: #fff;
+      color: #fff;
     }
 
     &#brand-hub {
-      //background-size: contain;
-      //background-color: #E9E9E9;
+      background-size: contain;
+      background-color: #E9E9E9;
     }
   }
 
   .item-inner:hover,
   .item-inner:active {
     * {
-      //color: #fff;
+      color: #fff;
     }
-      //background:rgba(0,0,0,0.6);
-      //transition: all 0.2s;
+      background:rgba(0,0,0,0.6);
+      transition: all 0.2s;
   }
 
 }
