--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -16,12 +16,6 @@
 
 #logo {
   font-family: $bebas;
-  a {
-    //color: #6b6b6b;
-    //&:hover, &:focus {
-      //color: #A864A8;
-    //}
-  }
 }
 
 html {
@@ -48,15 +42,20 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   background: #fff;
+  border-top: 3px solid #e5e5e5;
+}
+
+html {
+  background: #e5e5e5;
 }
 
 html, body {
     width: 100%;
-    height: 100%;
+    //height: 100%;
 }
 
 #___gatsby {
-    height: 100%;
+    //height: 100%;
 }
 
 #home {
@@ -64,7 +63,8 @@ html, body {
 }
 
 .container-wrap {
-  min-height: 100%;
+  min-height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-areas: "Header" "Main-content" "Footer";
   grid-template-rows: auto 1fr auto;
