--- a/src/layouts/components/_navigation.scss
+++ b/src/layouts/components/_navigation.scss
@@ -4,7 +4,7 @@ header {
   padding-bottom: 25px;
   flex-direction: column-reverse;
   @include breakpoint(medium) {
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
   }
 
@@ -13,51 +13,9 @@ header {
     background: none;
     padding-top: 90px;
     padding-bottom: 50px;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
   }
-
-  /*    #toggle {
-        height: 50px;
-        width: 50px;
-        display: block;
-        background: red;
-        border-radius: 250px;
-        text-indent: -9999px;
-        z-index: 11;
-        position: fixed;
-
-        @include breakpoint(medium) {
-          display: none;
-        }
-
-        &.active {
-          + #navigation {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: #E5E5E5;
-            left: 0;
-            top: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            z-index: 10;
-            visibility: visible;
-            li {
-              align-self: flex-start;
-              padding: 0;
-              margin-left: 7.2%;
-              margin-top: 25px;
-              margin-bottom: 25px;
-              a {
-                font-size: 4rem;
-              }
-            }
-          }
-        }
-      }*/
 }
 
 #navigation {
@@ -65,7 +23,6 @@ header {
   padding: 0;
   list-style: none;
   display: flex;
-  //visibility: hidden;
   visibility: visible;
 
   @include breakpoint(medium) {
@@ -90,7 +47,8 @@ header {
     }
     a {
       color: #4A4A4A;
-      font-size: 1.1764705882352942rem;
+      //font-size: 1.1764705882352942rem;
+      font-size: 1rem;
       padding-bottom: 2px;
       transition: all 0.2s ease-in-out;
       &.active {
@@ -102,7 +60,6 @@ header {
 }
 
 #logo {
-  //font-family: $bebas;
   font-size: 1.8823529411764706rem;
   letter-spacing: -1px;
   margin-right: auto;
@@ -111,14 +68,14 @@ header {
 
   @include breakpoint(medium) {
     font-size: 1.8823529411764706rem;
-    margin-left: auto;
-    margin-right: 0;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   @include breakpoint(large) {
     font-size: 2.3529411764705883rem;
-    margin-left: auto;
-    margin-right: 0;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   a {
