updating background image on main page, using gatsby image

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -48,6 +48,7 @@
       height: calc(100% - 7%);
       background:rgba(0,0,0,0.6);
       width: calc(100% - 14%);
+      z-index: 1;
       * {
         color: #fff;
       }
