updating text colour for southern sports

--- a/src/layouts/components/_case-studies.scss
+++ b/src/layouts/components/_case-studies.scss
@@ -208,6 +208,10 @@
       color: #fff;
     }
 
+    #southern-sports {
+      color: #fff;
+    }
+
     &#brand-hub {
       background-size: contain;
       background-color: #E9E9E9;
