adding fade in animations on homepage, initial page loadzz

--- a/src/layouts/components/_navigation.scss
+++ b/src/layouts/components/_navigation.scss
@@ -9,7 +9,7 @@ header {
   }
 
   @include breakpoint(large) {
-    position: relative;
+    //position: relative;
     background: none;
     padding-top: 90px;
     padding-bottom: 50px;
